GMS-124 Test enhancements